@@ -1,4 +1,9 @@
 
+2021-06-26  Ron Norman <rjn@inglenet.com>
+	* cobc.h: Add extern cb_dialect
+	* cobc.c: Set cb_dialect to -std= value
+	* codegen.c: Emit setting of module compile dialect
+
 2021-05-28  Ron Norman <rjn@inglenet.com>
 	* tree.c: Allow PIC clause not handled by precendence table
 	          Count decimals in $.$$ style PICTURE
